LPS-68496 Add new language key

--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language.properties
@@ -88,6 +88,7 @@ new-publish-template=New Publish Template
 no-export-processes-were-found=No export processes were found.
 no-import-processes-were-found=No import processes were found.
 no-pages=No Pages
+no-processes-were-found=No processes were found.
 no-publication-processes-were-found=No publication processes were found.
 no-scheduled-publication-processes-were-found=No scheduled publication processes were found.
 none-empty-site-pages-variation=None (Empty Site Pages Variation)
