LPS-68496 Add language keys for the notification handler

--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Drop a LAR File to Import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists.
 enabled-on-private-pages=Enabled on Private Pages
 enabled-on-public-pages=Enabled on Public Pages
+error-x-cannot-be-found=Error: {0} cannot be found.
+export-import-configuration=Export/Import Template
 export-import-portlet-permissions-help=If this is checked, the permissions assigned for the exported portlet window are included.
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Export Individual Deletions
@@ -169,7 +171,21 @@ update-site-pages-variation=Update Site Pages Variation
 view-page-staging-options=View Page Staging Options
 view-source=View Source
 x,-created-x-ago={0}, created {1} ago.
+x-export-layout-process-failed={0} Export process failed
+x-export-layout-process-finished-successfully={0} Export process finished successfully
+x-export-portlet-process-failed={0} Portlet Export process failed
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully
+x-import-layout-process-failed={0} Import process failed
+x-import-layout-process-finished-successfully={0} Import process finished successfully
+x-import-portlet-process-failed={0} Portlet Import process failed
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully
 x-is-staged={0} is staged.
+x-publish-layout-local-process-failed={0} Local Publication process failed
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully
+x-publish-layout-remote-process-failed={0} Remote Publication process failed
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully
+x-publish-portlet-process-failed={0} Portlet Publication process failed
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=You are currently reviewing this page. You can make changes and send them to the next step in the workflow when ready.
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=You cannot submit your changes because someone else has already submitted changes for approval.
