--- a/portal-impl/src/content/Language_sr_RS_latin.properties
+++ b/portal-impl/src/content/Language_sr_RS_latin.properties
@@ -5161,6 +5161,7 @@ unread-messages=Nepročitane Poruke
 unscramble=Razmrsi
 unsubscribe=Odjavi se
 unsubscribe-from-comments=Razmrsi od Komentara
+untitled=Untitled (Automatic Copy)
 untrusted=Nepouzdan
 untrusted-plugin-repositories=Neprovereni Dodatak Spremišta
 up=Iznad
