LRQA-28144 Update component names

--- a/test.properties
+++ b/test.properties
@@ -1273,6 +1273,7 @@
         Kaleo Forms Admin,\
         Polls,\
         Reports,\
+        Upgrades FW,\
         Web Form,\
         Workflow
 
@@ -1321,7 +1322,7 @@
         SOLR Impl,\
         Test Plugins,\
         Theme Loader,\
-        Upgrades,\
+        Upgrades Foundation,\
         User Groups,\
         Users and Organizations,\
         Util,\
@@ -1345,7 +1346,8 @@
 
     testray.team.staging.component.names=\
         Export/Import Framework,\
-        Staging
+        Staging,\
+        Upgrades Staging
 
     testray.team.support-qa.component.names=\
         Support QA
@@ -1391,6 +1393,7 @@
         Site Pages Administration,\
         Sitemap,\
         Tags,\
+        Upgrades WEM,\
         WCM,\
         Weather,\
         Web Content Administration,\
